# PicoSensorLogger

./: .gitignore  CMakeLists.txt  README.md  ld.sh  mk.sh
include/: AEADT7410.h  AQM0802.h  AdcLoggerTask.h  BME280.h  DisplayMode.h  FlashLogStorage.h  FreeRTOSConfig.h  TemperatureTask.h  board_i2c.h  led25.h  utility.h
src/: AEADT7410.cpp  AQM0802.cpp  AdcLoggerTask.cpp  BME280.cpp  EnvironmentTask.cpp  FlashLogStorage.cpp  TemperatureTask.cpp  led25.c  main.cpp
